styles.css
*{
  margin: 0px;
  font-family: segoe UI, sans-serif;
  text-decoration: none;
}

body{
    overflow-x: hidden;
}

a, a:visited{
    color: black;
}

.menu-burger{
  position: fixed;
  right: 20px;
  top: 20px;
  cursor: pointer;
  z-index: 3;
}

.burger-line{
  width:25px;
  height:3px;
  background-color: black;
  margin: 0px 0px 5px 0px;
  transition: color, 1s;
}

.burger-white > .burger-line{
  background-color: white;
  transition: color, 1s;
}

#header-band{
    position: absolute;
    width: 100%;
    padding: 8px;
    font-size: 1rem;
    top:0px;
    z-index: 3;
    background-color: rgba(255,255,255,0.5);
    transition: color, 1s;
}
#header-band.scrolled{
    position: fixed;
    background-color: white;
    transition: color, 1s;
}

#header-text{
  text-align: center;
}

section{
  position: relative;
  padding: 5vh 5vw 10vh 5vw;
  min-height: 200px;
  color: white;
  background-color: grey;
  display: flex;
  flex-direction: column;
  align-items: flex-start; /* Vertical center alignment */
  justify-content: flex-start;
  border-top: 10px solid #333333;
}

#section-one{
  background-image: linear-gradient(to right, #ffffff 0%, rgb(110, 13, 208) 20%, rgb(255, 0, 153) 50%, rgb(255, 102, 0) 80%, #ffffff 100%), url(img/map-city.png);
  background-size: cover;
  background-blend-mode:screen ;
  background-position: bottom;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  min-height: 40vh;
  padding: 20vh 10vw;
  border:0;
}

#section-one > div{
  color: #000000;
  padding: 10px;
  max-width:390px;
  text-align: left;
}

#section-one h3, #section-one p, #section-one small {
  border-left: 3px solid black;
}

h2{
  padding:10px 8px;
  position: sticky;
  top: 0;
  z-index: 5;
  color: black;
}

h3{
  font-size: 1.6rem;
  margin: 0;
  display: inline-block;
  color:black;
  padding:5px 8px;
}

p{
  font-size: 1.2rem;
  padding:5px 8px;
  margin: 0;
  display: inline-block;
}

small{
  padding:5px 8px;
  margin: 0;
  display: inline-block;
}

/* Project section */
#section-three{
  background-image: linear-gradient(to right, black 10%, rgb(20, 255, 218) 70%, white 100%), url(img/viaduct-crop.png);
  background-size:cover;
  background-blend-mode:color-dodge;
  color: #000000;
}
#section-three h3, #section-three p, #section-three small{
  margin-top: 3vh;
  border-left: 3px solid rgba(20, 255, 218, 0.6);
  background-color: rgba(200, 200, 200, 0.3);
}
#section-three p, #section-three small{
  margin-top: 0;
  background-color: rgba(20, 255, 218, 0.4);
}


/* Personal section */
#section-four-content{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: flex-start;
  width:100%;
}

#section-four-content > div{
  color: #000000;
  margin: 10px 30px 10px 0;
  max-width:350px;
  text-align: left;
}
#section-four h3, #section-four p, #section-four small {
  border-left: 3px solid black;
  background-color: rgba(200, 200, 200, 0.3);
}

/* Footer --------------------------------------------------- */
#section-footer{
  background-color: #333333;
  padding: 5vh 5vw 20px 5vw;
}
#section-footer *{
  color: #dddddd;
}
#section-footer i{
  padding-right: 5px;
}
#contacts-digital{
  width:100%;
}
#contacts-social{
  font-size: 1.8rem;
  float: right;
}
#copyright-statement{
  color: #999999;
}
.footer-line{
  width:100%;
  height:2px;
  background-color: #999999;
  margin: 20px 0;
}


#main-menu{
  display: flex;
  flex-direction: column;
  position: fixed;
  top:0px;
  height: 100%;
  z-index: 3;
  right: -300px;
  background-color: rgba(2,2,2, 0.7);
  padding: 50px 0px 50px 0px;
  text-align: right;
  transition: all, 1s;
  overflow: hidden;
  visibility: hidden;
}
#main-menu.show{
  right: -1px;
  visibility: visible;
  transition: all, 1s;
}

#main-menu li{
  padding: 0px 40px 10px 30px;
  border-left: 12px solid rgba(255, 0, 153, 0);
  list-style: none;
  text-decoration: none;
  transition: color, 2s;
}

#main-menu li:hover{
  border-left-color: rgba(255, 0, 153, 1);
  transition: color, 0.1s;
}

#main-menu a{
  color: white;
  font-size: 2.5rem;
}

.decoration{
  position: absolute;
  opacity: 0.7;
  top: 0px;
  border: 0px solid black;
  transform:skewX(-20deg);
}

section > :not(.decoration):not(h2){
  z-index: 2;
}

.odd{
  transform:skewX(20deg);
}

.neon-pink, .pink-container h3, .pink-container p, .pink-container small{
  background-color: rgba(255, 0, 153, 0.6);
}
.neon-yellow, .yellow-container h3, .yellow-container p, .yellow-container small{
  background-color: rgba(243, 243, 21, 0.6);
}
.neon-blue{
  background-color: rgba(20, 255, 218, 0.6);
}
.neon-green, .green-container h3, .green-container p, .green-container small{
  background-color: rgba(131, 245, 44, 0.6);
}
.neon-purple, .purple-container h3, .purple-container p, .purple-container small{
  background-color: rgba(110, 13, 208, 0.6);
}
.neon-orange{
  background-color: rgba(255, 102, 0, 0.6);
}
.grey-light{
  background-color: rgba(200, 200, 200, 0.6);
}
.grey-mid{
  background-color: rgba(150, 150, 150, 0.6);
}
.grey-dark{
  background-color: rgba(100, 100, 100, 0.6);
}
.grey-extradark{
  background-color: rgba(10, 10, 10, 0.6);
}

